--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version : '3'
 services:
+    lb:
+        image: haproxy:2.2
+        restart: always
+        ports:
+            - "3000:5000"
+        volumes:
+            - ./haproxy:/usr/local/etc/haproxy
+        deploy:
+            resources:
+                limits:
+                    memory: 1G
+        container_name: Haproxy2
     nodeChatapp1:
         image: giveesserverchat
         restart: always
