--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "fcm-node": "^1.6.1",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
@@ -40,6 +41,7 @@
     "nodemon": "^2.0.4",
     "paypal-rest-sdk": "^1.8.1",
     "redis": "^3.0.2",
+    "request-promise": "^4.2.6",
     "save": "^2.4.0",
     "sequelize": "^6.3.5",
     "socket.io": "^4.4.1",
